--- a/index.html
+++ b/index.html
@@ -2,59 +2,109 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Gilded Rose - Inventaire</title>
+  <title>Gilded Rose - Taverne Magique</title>
+  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
+      background: #fdf6e3;
+      font-family: 'Quicksand', sans-serif;
+      color: #4b2e00;
     }
 
-    h1 {
-      color: darkgoldenrod;
+    header {
+      background: linear-gradient(to right, #8B4513, #D2B48C);
+      padding: 20px;
+      text-align: center;
+      color: #fff;
+      font-family: 'UnifrakturCook', cursive;
+      font-size: 2.5rem;
+      letter-spacing: 2px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      background: #fffaf0;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    .day-counter {
+      text-align: center;
+      margin-top: 10px;
+      font-weight: bold;
+      font-size: 1.2rem;
+      color: #8B4513;
     }
 
     table {
-      border-collapse: collapse;
       width: 100%;
+      border-collapse: collapse;
       margin-top: 20px;
     }
 
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: left;
+    th {
+      background-color: #deb887;
+      color: #4b2e00;
+      font-weight: 600;
+      padding: 12px;
+      border-bottom: 2px solid #8B4513;
+    }
+
+    td {
+      padding: 12px;
+      border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {
+      background-color: #fff1dc;
     }
 
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: goldenrod;
+      display: block;
+      margin: 30px auto 0;
+      padding: 12px 25px;
+      font-size: 1.1rem;
+      background-color: #daa520;
       border: none;
       color: white;
+      border-radius: 10px;
       cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #b8860b;
     }
   </style>
 </head>
 <body>
 
-  <h1>🏵️ Inventaire - Gilded Rose</h1>
+  <header>🏵️ Gilded Rose - Taverne Magique</header>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>Jours restants (sellIn)</th>
-        <th>Qualité</th>
-      </tr>
-    </thead>
-    <tbody id="inventory-body">
-      <!-- Les items seront injectés ici -->
-    </tbody>
-  </table>
+  <main>
+    <div class="day-counter" id="day-counter">Jour 0</div>
 
-  <button onclick="nextDay()">📆 Passer un jour</button>
+    <table>
+      <thead>
+        <tr>
+          <th>Nom</th>
+          <th>Jours restants</th>
+          <th>Qualité</th>
+        </tr>
+      </thead>
+      <tbody id="inventory-body">
+      </tbody>
+    </table>
 
-  <script type="module">
+    <button onclick="nextDay()">📆 Passer un jour</button>
+  </main>
+
+  <script>
     class Item {
       constructor(name, sellIn, quality) {
         this.name = name;
@@ -129,7 +179,6 @@
         this._decreaseSellIn(item);
       }
     }
-
     const items = [
       new Item("+5 Dexterity Vest", 10, 20),
       new Item("Aged Brie", 2, 0),
@@ -141,6 +190,11 @@
     ];
 
     const shop = new Shop(items);
+    let currentDay = 0;
+
+    function updateDayCounter() {
+      document.getElementById('day-counter').textContent = `Jour ${currentDay}`;
+    }
 
     function renderTable() {
       const tbody = document.getElementById('inventory-body');
@@ -158,12 +212,14 @@
 
     function nextDay() {
       shop.updateQuality();
+      currentDay++;
+      updateDayCounter();
       renderTable();
     }
 
-    // Initial render
+    // Affichage initial
     renderTable();
+    updateDayCounter();
   </script>
-
 </body>
 </html>
